[MTB] fixed alignment

--- a/styles/MobileTabBar.module.css
+++ b/styles/MobileTabBar.module.css
@@ -12,6 +12,9 @@
     width: 100%;
     text-align: center;
     height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon {
